 20160621 (T.S.):
 - dmpehdr.c, dmprels.c, getehdr.c, pmelf.h: added ARM machine and
   ARM relocation type names.
 20140224 (T.S.):
 - bfd-reloc-sparc.c: first stab at implementing relocations for sparc32.
 - pmelf.h: renamed R_SPARC_12 -> R_SPARC_13 which seems to be the correct
   name (sparc abi supplement vers. 9).
 20130123 (T.S.):
 - pmbfd.h, bfd.c: added 'elf_section_flags()' (should go to bfd-elf.h
   if we ever implement that).
 - pmbfd.h: added 'bfd_mach_ppc_vle' (for binutils/opcodes compat - no
   real support)
 - pmbfdP.h, bfd.c: reduced internal representation of 'align_power' to
   uint8_t. Added 'aux_flags' and AUX_ELF64 as a discrinator for the ELF
   section header (indicating whether it is 64 or 32-bit).
 - pmelf.h: added SHF_PPC_VLE (for binutils/opcodes compat - no real support).
 20130117 (T.S.):
 - pmbfd.h: added arch/mach definitions required to build with 
   binutils-2.13's/opcodes.
 20121101 (T.S.):
 - getehdr.c: check SH and PH sizes only if respective numbers are > 0.
 20120716 (T.S.):
 - pmbfd.h: tweaked some things so that opcodes from binutils-2.21 compiles
    o added definition for STRING_COMMA_LEN
    o added bfd_arch_l1om (and associated 'bfd_mach_l1om...' macros)
    o MODIFIED bfd_mach_powerpc and bfd_mach_rs6000 to match binutils-2.21
    o fixed typo in bfd_mach_rs6k... macros
 20120712 (T.S.):
 - added dmpphdr.c, getphdr.c, scnt.c to CVS (had forgotten)
 - pmelfP.h, strm.c, mstrm.c, fstrm.c: moved handling of 'noclose' arg to
   pmelf_delstrm() to individual stream method.
 - pmelf.h, pmelfP.h, strm.c, mstrm.c: added pmelf_mapstrm() which uses mmap
   when available.
 20120712 (T.S.):
 - strm.c, fstrm.c, mstrm.c, pmelfP.h, pmelf.h: added pmelf_tell().
 - Makefile.am, dmpphdr.c, getphdr.c, scnt.c, rdelf.c, getehdr.c,
   pmelf.h:
   initial/rudimentary support for program headers.
 - symtab.c, rdelf.c, dmpshdr.c, getshdr.c, findsymhdrs.c, pmelf.h:
   support for dynamic symbols