@@ -48,7 +48,7 @@
 #include "pmbfdP.h"
 
 bfd_reloc_status_type
-pmbfd_perform_relocation(bfd *abfd, pmbfd_arelent *r, asymbol *psym, asection *input_section)
+pmbfd_perform_relocation(bfd *abfd, pmbfd_relent_t rtype, pmbfd_arelent *r, asymbol *psym, asection *input_section)
 {
 Elf32_Word     pc   = bfd_get_section_vma(abfd, input_section);
 Elf32_Rel      *rel = &r->rel32;
