@@ -1,4 +1,10 @@
  20160621 (T.S.):
+ - pmbfd.h, bfd-reloc-i386.c, bfd-reloc-m68k.c, bfd-reloc-powerpc.c,
+   bfd-reloc-sparc.c, bfd-reloc-x86_64.c, bfd.c:
+   added pmbfd_relent_t to discriminate between rel/rela; pass 
+   corresponding argument to pmbfd_perform_relocation() so that they
+   know what kind the relent is (ARM could be either).
+ 20160621 (T.S.):
  - dmpehdr.c, dmprels.c, getehdr.c, pmelf.h: added ARM machine and
    ARM relocation type names.
  20140224 (T.S.):
